Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Dit is de HTML
+<html>
+    <head>
+        <title>Hallo CT!</title>
+    </head>
+    <body>
+        <h1>Dit is een titel</h1>
+    </body>
+</html>>
